# evaluate

./: .gitignore  bots.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
analysis/: pyproject.toml
analysis/attendees/: accra-alj-unique-attendees.json  parse.py  unique_guests.py
analysis/notebooks/: Timelining.ipynb  rag-evaluation.ipynb  rag.ipynb
analysis/notebooks/.ipynb_checkpoints/: Timelining-checkpoint.ipynb  rag-checkpoint.ipynb
analysis/notebooks/data/: file_1.oga  file_10.oga  file_100.oga  file_101.oga  file_102.oga  file_103.oga  file_105.oga  file_106.oga  file_107.oga  file_108.oga  file_109.oga  file_11.oga  file_110.oga  file_111.oga  file_112.oga  file_113.oga  file_114.oga  file_117.oga  file_119.oga  file_12.oga  file_120.oga  file_121.oga  file_122.oga  file_123.oga  file_124.oga  file_125.oga  file_126.oga  file_127.oga  file_128.oga  file_129.oga  file_13.oga  file_130.oga  file_131.oga  file_132.oga  file_133.oga  file_134.oga  file_135.oga  file_136.oga  file_138.oga  file_139.oga  (+92 more)
prisma/: clearDatabase.ts  schema.prisma  seed.ts
prisma/migrations/20241028030430_init/: migration.sql
prisma/migrations/20241028201213_add_event_model/: migration.sql
prisma/migrations/20241028211031_modify_event_model/: migration.sql
prisma/migrations/20241029055005_add_happened_at/: migration.sql
scripts/: setWebhooks.ts
src/app/: layout.tsx  page.tsx
src/components/: AddEntryForm.module.css  AddEntryForm.tsx  Navbar.tsx  RAGChat.tsx  SimpleButton.tsx  Timeline.module.css  Timeline.tsx
src/lib/: db.js
(+17 files in other folders)
