[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
neo4j = "^5.28.1"
pandas = "^2.2.3"
dotenv = "^0.9.9"
plotly = "^6.1.2"
ipywidgets = "^8.1.7"
openai = "^1.84.0"
neo4j-graphrag = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
